exports[`DbcJsDocParser > parse() > should parse full param structure with datatype and specifier 1`] = `
{
  "entries": [
    {
      "type": "param",
      "value": "User identifier",
      "issues": [],
      "dataType": "string",
      "specifier": "userId"
    }
  ],
  "format": "single-line"
}
`;

exports[`DbcJsDocParser > parse() > should parse implements tag with specifier and trailing value 1`] = `
{
  "entries": [
    {
      "type": "implements",
      "value": "in src/domain/contracts/VendorGateway.ts",
      "issues": [],
      "specifier": "VendorGateway"
    }
  ],
  "format": "single-line"
}
`;

exports[`DbcJsDocParser > parse() > should parse implements tag without specifier 1`] = `
{
  "entries": [
    {
      "type": "implements",
      "value": "VendorGateway",
      "issues": []
    }
  ],
  "format": "single-line"
}
`;

exports[`DbcJsDocParser > parse() > should parse optional param with optional flag 1`] = `
{
  "entries": [
    {
      "type": "param",
      "value": "User age",
      "issues": [],
      "dataType": "number",
      "optional": true,
      "specifier": "age"
    }
  ],
  "format": "single-line"
}
`;

exports[`DbcJsDocParser > parse() > should parse param tag without datatype 1`] = `
{
  "entries": [
    {
      "type": "param",
      "value": "User identifier",
      "issues": [],
      "specifier": "userId"
    }
  ],
  "format": "single-line"
}
`;

exports[`DbcJsDocParser > parse() > should parse returns tag with datatype 1`] = `
{
  "entries": [
    {
      "type": "returns",
      "dataType": "boolean",
      "value": "True on success.",
      "issues": []
    }
  ],
  "format": "single-line"
}
`;

exports[`DbcJsDocParser > parse() > should parse returns tag without datatype 1`] = `
{
  "entries": [
    {
      "type": "returns",
      "value": "description without type",
      "issues": []
    }
  ],
  "format": "single-line"
}
`;

exports[`DbcJsDocParser > parse() > should parse see tag with specifier and trailing value 1`] = `
{
  "entries": [
    {
      "type": "see",
      "value": "in ./path",
      "issues": [],
      "specifier": "Interface#method"
    }
  ],
  "format": "single-line"
}
`;

exports[`DbcJsDocParser > parse() > should parse throws tag with datatype 1`] = `
{
  "entries": [
    {
      "type": "throws",
      "dataType": "Error",
      "value": "On invalid input",
      "issues": []
    }
  ],
  "format": "single-line"
}
`;

exports[`DbcJsDocParser > parse() > should parse unknown tag by generic rule 1`] = `
{
  "entries": [
    {
      "type": "author",
      "value": "John Doe",
      "issues": []
    }
  ],
  "format": "single-line"
}
`;
